feat : search board game by player
